# nczarr-geozarr

./: main.py  pyproject.toml
nczarr2geozarr/: axis_inference.py  builder.py  classifier.py  cli.py  models.py  pyproject.toml  reader.py  resolver.py  writer.py
nczarr_geozarr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_pipeline.py
